<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">systemupdateapp</string>
    <string name="hello_world">检查本地更新</string>
    <string name="menu_settings">Settings</string>
    
    <!-- 江美琪 -->
    <string name="label">系统升级-升级文件选择</string>
    <string name="choose_update_way">系统升级-升级方式选择</string>
    <string name="netsystemapp">系统升级-网络可用APP</string>
	<string name="netsystem">系统升级-可用升级包</string>
	<string name="no_firware">没有可用的升级包</string>
	<string name="downloaded">下载完成</string>
	<string name="download">下  载</string>
	<string name="cancel_download">取消下载</string>
	
	<!-- 钟合亮 -->
	<string name="call_msg1">调用系统信息1</string>
    <string name="call_msg2">调用系统信息2</string>
    <string name="call_msg3">调用系统信息3</string>
    <string name="soft_has_update">软件更新</string>
    <string name="new_update_down">检测到新版本，请立即更新</string>
    <string name="update_now">立即更新</string>
    <string name="update_ok">软件更新成功</string>
    <string name="update_fail">软件更新成功</string>
    <string name="btn_yes">确定</string>
    <string name="btn_cancle">取消</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="start_download">开始下载</string>
    <string name="warn_cant_use_sd">存储区不存在或访问受限</string>
    <string name="after_MSG_before_down">====调用更新提示方法并进入下载模组之前</string>
    <string name="install0k_exit_MSG">调用安装成功信息并退出</string>
    <string name="installFail_exit_MSG">调用安装失败信息并退出</string>
    <string name="broadcast_enter_download">接收进入下载模组里面的广播</string>
    <string name="broadcast_tell_installOK">接收提示安装成功系统信息的广播</string>
    <string name="broadcast_tell_installFail">接收提示安装失败系统信息的广播</string>
    <string name="broadcast_down_ok">接收下载完成广播</string>
    <string name="hello">Hello dehoo!</string>
    <!-- 钟何亮结束  -->
    
    <string name="call_system_info_one">调用系统信息1</string>
    <string name="call_system_info_two">调用系统信息2</string>
    <string name="call_system_info_three">调用系统信息3</string>
    <string name="local_update">本地升级</string>
    <string name="network_update">网络升级</string>
    <string name="check_all">全选</string>
    <string name="check_nothing">反选</string>
    <string name="cancle_selected">取消已选</string>
    <string name="network_download">网络下载</string>
    <string name="no_data">没有数据</string>

    
    

</resources>